# metric-engine

./: .dockerignore  .gitignore  Dockerfile  PROJECT_README.md  README.md  pyproject.toml  requirements.txt
aggregator/: __init__.py  __main__.py  consumer.py  coordination.py  metrics.py  service.py  settings.py
tests/: test_metrics.py
