[project]
name = "metric-engine"
version = "0.1.0"
description = "Live metrics aggregator: Kafka order telemetry -> 1s windows -> Redis"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.3",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
